FIX: Resolve critical bugs in Job-Service (SESSION-008)
Two critical compilation errors fixed:

BUG #1: Removed non-existent getIndustryName() getter from Job.java
- Getter referenced undefined field 'industryName'
- Only 'industryId' field exists (as UUID)
- Removed 3-line method (lines 410-412)

BUG #2: Implemented updateJob() method in JobApplicationService.java
- Previous: 8-line NO-OP stub (saved job without changes)
- Now: 60-line complete implementation
  * DTO → Value Object transformation for all fields
  * Partial update support (null-safe checks)
  * Status validation (DRAFT-only)
  * Job.reconstruct() for immutability
  * Timestamp management
  * Contextual error messages

Both fixes maintain DDD/Hexagonal patterns
Previous audit issues detected: SESSION-007 (antigravity)
Current session coordination: SESSION-008 (github-copilot)

Files modified:
- services/job-service/src/main/java/.../Job.java (-3 lines)
- services/job-service/src/main/java/.../JobApplicationService.java (+52 lines)
- services/job-service/pom.xml (fixed dependency version)
- ai/agent_lock.yaml (released lock)
- ai/change_log.md (documented fixes)